# quotegif

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  config.example.toml  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  qg  qg-gpu  qg-gpu.bat  qg-web-gpu  qg-web-gpu.bat  qg.bat
quotegif/: __init__.py  __main__.py  cli.py  clipmaker.py  config.py  episode_resolve.py  find_service.py  gifmaker.py  identify.py  library.py  matcher.py  media_select.py  models.py  pipeline.py  ref_parse.py  subtitle_render.py  subtitles.py  time_parse.py  timing.py  transcribe.py  utils.py  verbose.py
quotegif/providers/: anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  prompts.py  registry.py  response.py
quotegif/web/: __init__.py  __main__.py  app.py  auth.py  cli_runner.py  create_user.py  db.py  edit_preview.py  jobs.py  paths.py  trim.py
quotegif/web/static/: app.js  index.html  login.html  login.js  style.css
